Update - Read json file
Updated the code to read the Elsevier json file

--- a/CS648 - Code.ipynb
+++ b/CS648 - Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6214,6 +6214,137 @@
     "# Export dataframe as a json file\n",
     "\n",
     "elsevier.to_json('elsevier_data.json', orient='records')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DOI</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>First Author</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Publication Date</th>\n",
+       "      <th>Publication Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td></td>\n",
+       "      <td>Assessment of Coastal Water Quality by Testing...</td>\n",
+       "      <td>Ezzghari Y.</td>\n",
+       "      <td>Morocco</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>International Journal of Euro-Mediterranean St...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10.1515/9783111317779-004</td>\n",
+       "      <td>Menocchio mapped: Italian microhistory and the...</td>\n",
+       "      <td>Madden A.</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>Zoomland: Exploring Scale in Digital History a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10.21077/ijf.2023.70.4.134234-07</td>\n",
+       "      <td>Assessing land suitability for sustainable aqu...</td>\n",
+       "      <td>Kumar T.</td>\n",
+       "      <td>India</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>Indian Journal of Fisheries</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10.23858/SA/75.2023.2.3374</td>\n",
+       "      <td>Attempts at spatial analyses of data from the ...</td>\n",
+       "      <td>Solecki R.</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>Sprawozdania Archeologiczne</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10.21138/GF.825</td>\n",
+       "      <td>MEASUREMENT OF SPATIAL INEQUITY IN THE ACCESSI...</td>\n",
+       "      <td>Bosisio A.</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>GeoFocus</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                DOI  \\\n",
+       "0                                     \n",
+       "1         10.1515/9783111317779-004   \n",
+       "2  10.21077/ijf.2023.70.4.134234-07   \n",
+       "3        10.23858/SA/75.2023.2.3374   \n",
+       "4                   10.21138/GF.825   \n",
+       "\n",
+       "                                               Title First Author  \\\n",
+       "0  Assessment of Coastal Water Quality by Testing...  Ezzghari Y.   \n",
+       "1  Menocchio mapped: Italian microhistory and the...    Madden A.   \n",
+       "2  Assessing land suitability for sustainable aqu...     Kumar T.   \n",
+       "3  Attempts at spatial analyses of data from the ...   Solecki R.   \n",
+       "4  MEASUREMENT OF SPATIAL INEQUITY IN THE ACCESSI...   Bosisio A.   \n",
+       "\n",
+       "        Location Publication Date  \\\n",
+       "0        Morocco       2023-12-31   \n",
+       "1  United States       2023-12-31   \n",
+       "2          India       2023-12-31   \n",
+       "3         Poland       2023-12-31   \n",
+       "4          Spain       2023-12-31   \n",
+       "\n",
+       "                                    Publication Name  \n",
+       "0  International Journal of Euro-Mediterranean St...  \n",
+       "1  Zoomland: Exploring Scale in Digital History a...  \n",
+       "2                        Indian Journal of Fisheries  \n",
+       "3                        Sprawozdania Archeologiczne  \n",
+       "4                                           GeoFocus  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read Elsevier .json file\n",
+    "\n",
+    "with open('elsevier_data.json', 'r') as f:\n",
+    "    elsevier_data = json.load(f)\n",
+    "\n",
+    "# Converting json to dataframe\n",
+    "\n",
+    "elsevier_df = pd.DataFrame(elsevier_data)\n",
+    "elsevier_df.head(5)"
    ]
   }
  ],
