Update markdown text
Update markdown text

--- a/CS648 - Code.ipynb
+++ b/CS648 - Code.ipynb
@@ -1124,7 +1124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The view of the data below shows that the API extracted multiple values for some columns such as \"afid\", \"affilname\", \"affiliation_city\" and \"affiliation_country\", which refer to the first author of the article. Following further research on this issue using the Elsevier Search API - Interactive Documentation (https://dev.elsevier.com/search.html#!/Scopus_Search/ScopusSearch), it was noted that this seems to be a fault in the Scopus_Search API, because when searching for the author's details using the Author_Search API instead, only one affiliation name, city and country is returned in most cases for each author. "
+    "The view of the data below shows that the API extracted multiple values for the columns \"affiliation_city\" and \"affiliation_country\", which refer to the first author of the article. Following further research on this issue using the Elsevier Search API - Interactive Documentation (https://dev.elsevier.com/search.html#!/Scopus_Search/ScopusSearch), it was noted that this seems to be a fault in the Scopus_Search API, because when searching for the author's details using the Author_Search API instead, only one affiliation name, city and country is returned in most cases for each author. "
    ]
   },
   {
@@ -1396,7 +1396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The results below show the number of rows with multiple values in the columns \"affilname\", \"affiliation_city\" and \" affiliation_country\". "
+    "The results below show the number of rows with multiple values in the columns \"affiliation_city\" and \" affiliation_country\". "
    ]
   },
   {
@@ -1577,7 +1577,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The results below show that the \"affiliation_id\" only has multiple values in the \"affiliation\" column, specifically in 136 rows. There are no multiple values in the columns \"affiliation_id\", \"city\" or \"country\"."
+    "Now there are no rows with multiple values in the columns \"city\" or \"country\"."
    ]
   },
   {
